--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 
 	<div class='row'>
 		<div class='col-md-12' id='header'>
-			<h1>All The Burgers</h1>
+			<h1>Welcome to Good Burger, Home of the Good Burger</h1>
 		</div>
 	</div>
 	{{{body}}}
